force-app/main/default/objects/Resource__c/Resource__c.object-meta.xml
<CustomObject>
    <description>PS resource for Presales Fund Request</description>
    <label>Resource</label>
    <nameField>
        <displayFormat>Resource-{000}</displayFormat>
        <label>Resource ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>