force-app/main/default/objects/Resource__c/fields/PFR_BU__c.field-meta.xml
<CustomField>
    <fullName>PFR_BU__c</fullName>
    <label>BU</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PS</fullName>
                <default>true</default>
                <label>PS</label>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>ISG</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>