force-app/main/default/objects/Resource__c/fields/PFR_Daily_Rate_USD__c.field-meta.xml
<CustomField>
    <fullName>PFR_Daily_Rate_USD__c</fullName>
    <label>Hourly Rate (USD)</label>
    <precision>16</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>