force-app/main/default/objects/Resource__c/fields/PFR_Num_of_days_not_to_exceed__c.field-meta.xml
<CustomField>
    <fullName>PFR_Num_of_days_not_to_exceed__c</fullName>
    <label>Hours not to exceed</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>