force-app/main/default/objects/Resource__c/fields/PFR_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>PFR_Resource_Name__c</fullName>
    <label>Resource Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>