force-app/main/default/objects/Resource__c/fields/PFR_Task__c.field-meta.xml
<CustomField>
    <fullName>PFR_Task__c</fullName>
    <label>Task</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>