force-app/main/default/objects/Resource__c/fields/PFR_Total__c.field-meta.xml
<CustomField>
    <fullName>PFR_Total__c</fullName>
    <formula>(PFR_Travel_Cost__c + (PFR_Num_of_days_not_to_exceed__c  *  PFR_Daily_Rate_USD__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>