force-app/main/default/objects/Resource__c/fields/PFR_Travel_Cost__c.field-meta.xml
<CustomField>
    <fullName>PFR_Travel_Cost__c</fullName>
    <label>Travel Cost (USD)</label>
    <precision>16</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>