force-app/main/default/objects/Resource__c/fields/PSFundingRequest__c.field-meta.xml
<CustomField>
    <fullName>PSFundingRequest__c</fullName>
    <label>Presales Funding Request</label>
    <referenceTo>Presales_Funding_Request__c</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <trackHistory>false</trueHistory>
    <type>MasterDetail</type>
</CustomField>