force-app/main/default/objects/Resource__c/fields/Submit_for_Approval_to_PS_Leader__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_Approval_to_PS_Leader__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked by PreSales person, this will be used to submit the PS Funding Request for approval to PS Leader</description>
    <inlineHelpText>Please check to submit this request for approval to PS Leader</inlineHelpText>
    <label>Submit for Approval</label>
    <type>Checkbox</type>
</CustomField>