force-app/main/default/objects/Resource__c/fields/Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Value__c</fullName>
    <label>Total Value</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>